# Dream-Memory

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
.deepagent/memory/: DREAMS.md  MEMORY.preview.md  candidates.jsonl
docs/: architecture.md  cli.md  config.md  run-workflow.md
docs/superpowers/plans/: 2026-07-05-dream-memory-implementation.md  2026-07-06-dream-promotion-implementation.md  2026-07-06-model-runtime-implementation.md  2026-07-10-evaluation-outcome-quality.md  2026-07-10-precision-evidence-gate.md
docs/superpowers/specs/: 2026-07-05-dream-memory-design.md  2026-07-06-dream-promotion-design.md  2026-07-06-model-runtime-design.md  2026-07-10-evaluation-outcome-quality-design.md  2026-07-10-precision-evidence-gate-design.md
examples/: config.anthropic.json  labeled-events.jsonl  sample-events.jsonl
src/deepagent_memory/: memory_agent.py  memory_cli.py  memory_config.py  memory_runs.py  model_providers.py  web.py
src/deepagent_project_advice/: __init__.py  deepagent_runtime.py  memory_agent.py  memory_cli.py  memory_dreaming.py  memory_models.py  web.py
src/dream_memory/: __init__.py  memory_agent.py  memory_cli.py  memory_config.py  memory_dreaming.py  memory_eval.py  memory_export.py  memory_graph.py  memory_importers.py  memory_models.py  memory_runs.py  model_providers.py  web.py
src/dream_memory/examples/: config.anthropic.json  config.openai.json  labeled-events.jsonl  reviewed.example.jsonl
src/dream_memory/templates/: memory_config.html  memory_review.html
tests/: test_memory_agent.py  test_memory_cli.py  test_memory_config.py  test_memory_dreaming.py  test_memory_eval.py  test_memory_export.py  test_memory_graph.py  test_memory_importers.py  test_memory_models.py  test_memory_review_web.py  test_memory_runs.py  test_model_providers.py  test_web.py
