[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagent-memory"
version = "0.1.0"
description = "Local CLI for importing, reviewing, and injecting durable agent memory."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Gemaolin" }]
dependencies = [
    "langgraph>=1.0.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = []

[project.scripts]
deepagent-memory = "deepagent_memory.memory_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
